# ai_client_core

./: .gitignore  CMakeLists.txt  README.md
src/: GeminiChat.cpp  GeminiChat.hpp
src/core/: ErrorCodes.h
src/core/domain/: ChatRequest.h  ChatResponse.h  ChatSession.h  HttpRequest.h  HttpResponse.h  Message.h
src/core/ports/: IAiService.h  IChatRepository.h  IConfigProvider.h  IHttpClient.h  ILogger.h
src/infrastructure/gemini/: JsonReader.h  JsonWriter.cpp  JsonWriter.h
